package com.sba301.ecommerce.features.entities.enums;

public enum OrderChannel {
    ONLINE,
    IN_STORE
}
