package com.sba301.ecommerce.features.entities.enums;

public enum OrderPaymentStatus {
    UNPAID,
    PAID,
    REFUNDED
}
