package com.sba301.ecommerce.features.entities.enums;

public enum OrderStatus {
    PENDING,
    CONFIRMED,
    SHIPPING,
    DELIVERED,
    CANCELLED,
    COMPLETED
}
