package com.sba301.ecommerce.features.entities.enums;

public enum PaymentMethod {
    CASH,
    COD,
    BANK_TRANSFER,
    MOMO,
    VNPAY
}
