package com.sba301.ecommerce.features.entities.enums;

public enum PaymentTxnStatus {
    PENDING,
    SUCCESS,
    FAILED,
    REFUNDED
}
