package com.sba301.ecommerce.features.entities.enums;

public enum ProductStatus {
    DRAFT,
    ACTIVE,
    HIDDEN
}
