package com.sba301.ecommerce.features.entities.enums;

public enum Role {
    ADMIN,
    STAFF,
    CUSTOMER
}
